[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Bosses/MotiveBall/MotiveBallGun.png" type="Texture" id=1]
[ext_resource path="res://src/MotiveBall.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Bosses/MotiveBall/MotiveBallIdle.png" type="Texture" id=3]
[ext_resource path="res://Stages/Ball.gd" type="Script" id=4]
[ext_resource path="res://Audio/SE/hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/SE/SHuskShoot.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 72.111

[node name="Motball" type="KinematicBody2D"]
position = Vector2( 488, 288 )
script = ExtResource( 2 )

[node name="Ball" type="Area2D" parent="." groups=["springhurt"]]
scale = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="Gun" type="Sprite" parent="Ball"]
z_index = 4
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Ball/Gun"]
position = Vector2( 0, -90 )

[node name="Gun2" type="Sprite" parent="Ball"]
rotation = 1.5708
z_index = 4
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Ball/Gun2"]
position = Vector2( 0, -90 )

[node name="Gun3" type="Sprite" parent="Ball"]
visible = false
rotation = 3.14159
z_index = 4
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Ball/Gun3"]
position = Vector2( 0, -90 )

[node name="Gun4" type="Sprite" parent="Ball"]
rotation = 4.71239
z_index = 4
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Ball/Gun4"]
position = Vector2( 0, -90 )

[node name="BallAnims" type="AnimatedSprite" parent="Ball"]
z_index = 5
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="hurt" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource( 5 )
volume_db = -5.746
bus = "SFX"

[node name="attacksnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="Ball" to="Ball" method="_on_Ball_area_entered"]
